<resources>
    <string name="app_name">Kalyana</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Donot have an account? Sing up</string>
    <string name="btn_link_to_login">already registered. login me!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>




    <string-array name="users_arrays">
        <item>Select Profile</item>
        <item>Self</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Brother</item>
        <item>Sister</item>
        <item>Friend</item>
        <item>Relative</item>
    </string-array>

    <string name="sister_prompt">No. of sisters</string>

    <string-array name="sister_arrays">
        <item>No. of sisters</item>
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string-array name="brother_arrays">
        <item>No. of brothers</item>
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="gender_arrays">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="date_arrays">
        <item>Date</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>


    <string-array name="month_arrays">

        <item>Month</item>
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>

    </string-array>


    <string-array name="year_arrays">

        <item>Year</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1991</item>
        <item>1992</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2001</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>


    <string-array name="religion_arrays">

        <item>Select</item>
        <item>Hindu</item>
        <item>Muslim</item>
        <item>Christian</item>
        <item>Buddhist</item>
        <item>Jewish</item>
        <item>No Religion</item>
        <item>Spiritual</item>
        <item>Other</item>

    </string-array>


    <string-array name="mother_tongue_arrays">

        <item>Select</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Malayalam</item>
        <item>Bengali</item>
        <item>Assamese</item>
        <item>Gujarati</item>
        <item>Konkani</item>
        <item>Marathi</item>
        <item>Urdu</item>

    </string-array>


    <string-array name="language_arrays">

        <item>Select</item>
        <item>English</item>
        <item>Hindi</item>
        <item>Kannada</item>
        <item>Telugu</item>
        <item>Tamil</item>
        <item>Malayalam</item>
        <item>Bengali</item>
        <item>Assamese</item>
        <item>Gujarati</item>
        <item>Konkani</item>
        <item>Marathi</item>
        <item>Urdu</item>

    </string-array>


    <string-array name="country_arrays">

        <item>Select country</item>
        <item>India</item>
        <item>USA</item>
        <item>UK</item>
        <item>UAE</item>
        <item>Canada</item>
        <item>Australia</item>
        <item>New Zealand</item>
        <item>Pakistan</item>
        <item>Saudi Arabia</item>
        <item>Kuwait</item>
        <item>South Africa</item>
        <item>Srilanka</item>

    </string-array>

    <string-array name="state_arrays">

        <item>Select state</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>

    </string-array>

    <string-array name="city_arrays">

        <item>Select city</item>
        <item>Vishakhapatnam</item>
        <item>Tirupati</item>
        <item>Kakinada</item>
        <item>New Town Kolkata</item>
        <item>Bidhannagar</item>
        <item>Durgapur</item>
        <item>Haldia</item>
        <item>Dahod</item>
        <item>Rajkot</item>
        <item>Vadodara</item>
        <item>Surat</item>
        <item>Ahmedabad</item>
        <item>Gandhinagar</item>
        <item>Bhopal</item>
        <item>Indore</item>
        <item>Gwalior</item>
        <item>Jabalpur</item>
        <item>Satna</item>
        <item>Sagar</item>
        <item>Ujjain</item>
        <item>Coimbatore</item>
        <item>Chennai</item>
        <item>Madurai</item>
        <item>Tiruchirapalli</item>
        <item>Vellore</item>
        <item>Salem</item>
        <item>Erode</item>
        <item>Tiruppur</item>
        <item>Dindigul</item>
        <item>Thanjavur</item>
        <item>Tirunelveli</item>
        <item>Thoothukudi</item>
        <item>Mangaluru</item>
        <item>Belagavi</item>
        <item>Shivamogga</item>
        <item>Hubbali-Dharwad</item>
        <item>Tumakuru</item>
        <item>Davanagere</item>
        <item>Kochi</item>
        <item>Karimnagar</item>
        <item>Warangal</item>
        <item>Greater Mumbai</item>
        <item>Thane</item>
        <item>Kalyan-Dombivali</item>
        <item>Pimpri-Chinchwad</item>
        <item>Nashik</item>
        <item>Amravati</item>
        <item>Solapur</item>
        <item>Nagpur</item>
        <item>Pune</item>
        <item>Aurangabad</item>
        <item>New Delhi</item>
        <item>Udaipur</item>


    </string-array>


    <string name="text1">Thanks for Joining Us,  Now we will build his or her Profile."</string>


    <string-array name="marital_arrays">

        <item>Select</item>
        <item>Never Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
        <item>Awaiting Divorce</item>

    </string-array>


    <string-array name="education_arrays">

        <item>Select</item>
        <item>School</item>
        <item>High School</item>
        <item>Associates degree</item>
        <item>Bachelors</item>
        <item>Masters</item>
        <item>Doctorate</item>

    </string-array>

    <string-array name="works_in_arrays">

        <item>Select</item>
        <item>Private firm</item>
        <item>Government firm</item>
        <item>Not working</item>

    </string-array>

    <string-array name="food_type_arrays">

        <item>Select</item>
        <item>vegetarian</item>
        <item>Non- vegetarian</item>

    </string-array>

</resources>

